force-app/main/default/objects/docutizexa__EnvelopeExecuteHistory__c/docutizexa__EnvelopeExecuteHistory__c.object-meta.xml
<CustomObject>
    <label>Envelope Execute History</label>
    <nameField>
        <displayFormat>EEH-{0000000000}</displayFormat>
        <label>Envelope Execute History No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Envelope Execute Historys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>