force-app/main/default/objects/docutizexa__EnvelopeExecuteHistory__c/fields/docutizexa__D3WorkerExecutionHistory__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__D3WorkerExecutionHistory__c</fullName>
    <label>Linkage History</label>
    <referenceTo>docutizexa__D3WorkerExecutionHistory__c</referenceTo>
    <relationshipLabel>Envelope Execute Historys</relationshipLabel>
    <relationshipName>EnvelopeExecuteHistorys</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>