force-app/main/default/objects/docutizexa__EnvelopeExecuteHistory__c/fields/docutizexa__DeliveryCount__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__DeliveryCount__c</fullName>
    <label>Delivery Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>