force-app/main/default/objects/docutizexa__EnvelopeExecuteHistory__c/fields/docutizexa__DocumentCount__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__DocumentCount__c</fullName>
    <label>Document Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>