force-app/main/default/objects/docutizexa__EnvelopeExecuteHistory__c/fields/docutizexa__EnevelopeSubject__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__EnevelopeSubject__c</fullName>
    <label>Enevelope Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>