force-app/main/default/objects/docutizexa__EnvelopeExecuteHistory__c/fields/docutizexa__EnvelopeAttribute1__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__EnvelopeAttribute1__c</fullName>
    <label>Envelope Attribute 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>