force-app/main/default/objects/docutizexa__EnvelopeExecuteHistory__c/fields/docutizexa__EnvelopeAttribute2__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__EnvelopeAttribute2__c</fullName>
    <label>Envelope Attribute 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>