force-app/main/default/objects/docutizexa__EnvelopeExecuteHistory__c/fields/docutizexa__EnvelopeAttribute4__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__EnvelopeAttribute4__c</fullName>
    <label>Envelope Attribute 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>