force-app/main/default/objects/docutizexa__EnvelopeExecuteHistory__c/fields/docutizexa__EnvelopeExecutionDate__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__EnvelopeExecutionDate__c</fullName>
    <label>Envelope Execution Date</label>
    <type>DateTime</type>
</CustomField>