force-app/main/default/objects/docutizexa__EnvelopeExecuteHistory__c/fields/docutizexa__EnvelopeHistoryUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__EnvelopeHistoryUpdateDate__c</fullName>
    <label>Envelope History Update Date</label>
    <type>DateTime</type>
</CustomField>