force-app/main/default/objects/docutizexa__EnvelopeExecuteHistory__c/fields/docutizexa__EnvelopeName__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__EnvelopeName__c</fullName>
    <label>Envelope Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>