force-app/main/default/objects/docutizexa__EnvelopeExecuteHistory__c/fields/docutizexa__EnvelopeOrder__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__EnvelopeOrder__c</fullName>
    <label>Envelope Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>