force-app/main/default/objects/docutizexa__EnvelopeExecuteHistory__c/fields/docutizexa__EnvelopeValue__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__EnvelopeValue__c</fullName>
    <label>Envelope Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>