force-app/main/default/objects/docutizexa__EnvelopeExecuteHistory__c/fields/docutizexa__StorageErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__StorageErrorMessage__c</fullName>
    <label>Storage Error Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>