force-app/main/default/objects/docutizexa__EnvelopeExecuteHistory__c/fields/docutizexa__StorageExecutionDate__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__StorageExecutionDate__c</fullName>
    <label>Storage Execution Date</label>
    <type>DateTime</type>
</CustomField>