force-app/main/default/objects/docutizexa__EnvelopeExecuteHistory__c/fields/docutizexa__StorageHistoryUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__StorageHistoryUpdateDate__c</fullName>
    <label>Storage History Update Date</label>
    <type>DateTime</type>
</CustomField>