force-app/main/default/objects/docutizexa__EnvelopeExecuteHistory__c/fields/docutizexa__StorageId__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__StorageId__c</fullName>
    <label>Storage ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>