force-app/main/default/objects/docutizexa__EnvelopeExecuteHistory__c/fields/docutizexa__StorageName__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__StorageName__c</fullName>
    <label>Storage Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>