force-app/main/default/objects/docutizexa__EnvelopeExecuteHistory__c/fields/docutizexa__StorageSituation__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__StorageSituation__c</fullName>
    <label>Storage Situation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>