force-app/main/default/objects/docutizexa__EnvelopeExecuteHistory__c/fields/docutizexa__StorageStatus__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__StorageStatus__c</fullName>
    <label>Storage Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Running</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Untreated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>